--- a/css/costum.css
+++ b/css/costum.css
@@ -7,7 +7,7 @@ font-family: 'Quicksand', sans-serif;
 */
 
 h1{
-    font-family: 'Courgette', cursive;
+    font-family: 'Montserrat', sans-serif;
 }
 
 p{
